Inheritance strategy and JPQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,17 @@ spring.datasource.url=jdbc:h2:file:/home/edward/Java/Courses/Java45/h2java45
 #spring.datasource.name=java45
 
 #MySQL in docker
+#spring.datasource.url=jdbc:mysql://localhost:3307/java45
+#spring.datasource.username=root
+#spring.datasource.password=1234
 
 
 #PostgreSql by cloud
 #https://www.elephantsql.com/
+#spring.datasource.url=jdbc:postgresql://stampy.db.elephantsql.com:5432/xefyltpo
+#spring.datasource.username=xefyltpo
+#spring.datasource.password=P4_stTCvfFyyYMTO43BIzQ1safai_6jg
 
 #hibernate
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
